--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+     src="https://thumbs.dreamstime.com/z/zebras-nairobi-national-park-nairoby-city-background-zebra-puts-head-back-other-zebra-nairobi-kenya-zebras-128330727.jpg?ct=jpeg"
+     />
+    <img
+     src="https://thumbs.dreamstime.com/z/zebras-nairobi-national-park-nairoby-city-background-zebra-puts-head-back-other-zebra-nairobi-kenya-zebras-128330727.jpg?ct=jpeg"
+     alt="A herd of zebras grazing in Nairobi National Park"
+    />
+    <img
+     src="https://thumbs.dreamstime.com/z/zebras-nairobi-national-park-nairoby-city-background-zebra-puts-head-back-other-zebra-nairobi-kenya-zebras-128330727.jpg?ct=jpeg"
+     alt="A herd of zebras grazing in Nairobi National Park" 
+     title="Kenyan Wildlife"
+    />  
   </body>
 </html>
